lost too much time trying to fix webpack version issue. Style half way done so i can focus on second lab

--- a/starter-code/src/App.css
+++ b/starter-code/src/App.css
@@ -7,31 +7,58 @@
   /* justify-content: left; */
 }
 
+#nav-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 40px;
+}
+
 .upper-section h1 {
-  font-size: large;
+  font-size: 80px;
+  margin-left: 40px;
+  width: 50%;
+  margin-bottom: -20px;
+}
+
+.upper-section p {
+  margin-left: 40px;
+  width: 25%;
+}
+
+.upper-section button {
+  margin-left: 40px;
+  font-size: 22px;
+  padding: 20px;
+  margin-top: 40px;
+  margin-bottom: 70px ;
 }
 
 .lower-section {
   color: #252931;
+}
+
+.cards-container {
+  margin-top: 70px;
   display:flex;
   flex-direction: row;
   justify-content: space-around;
-}
 
-#nav-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
 }
-
 .card {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 50px;
+}
+
+.card h4 {
+  margin-top: -5px;
 }
 
 .card p {
   align-items: center;
   text-align: center;
   padding: 10px;
+  margin-top: -20px;
 }
